responsive layout adjustments

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -6,6 +6,7 @@
 @import "components/animate/animate";
 @import "components/hamburgers/hamburgers";
 @import "components/main_menu";
+@import "components/unslider";
 
 @import "content/globals";
 @import "content/s_hero";
