--- a/scss/content/_globals.scss
+++ b/scss/content/_globals.scss
@@ -84,14 +84,18 @@ input[type].required::placeholder{
   h1,h2,h3,h4{@extend %textImgSwap;}
 }
 
-.partidoswrapp,.flechaswrapp{width: 50%;}
+.partidoswrapp,.flechaswrapp{width: 48%;display: inline-block;}
 .pri{
   @include img_sprite();
   background-image: $pri;
   background-size: contain;
   overflow: hidden;
-  width: 50%;
+  width: 47%;
   height: auto;
+  margin: 0;
+  margin-right: 1%;
+  float: left;
+
   &::after{padding-bottom: 100%;}
 
   h5{@extend %textImgSwap;}
@@ -102,8 +106,11 @@ input[type].required::placeholder{
   background-image: $partidoverde;
   background-size: contain;
   overflow: hidden;
-  width: 50%;
+  width: 49%;
   height: auto;
+  margin:0;
+  float: left;
+
   &::after{padding-bottom: 100%;}
 
   h5{@extend %textImgSwap;}
