--- a/scss/content/_s_comunidades.scss
+++ b/scss/content/_s_comunidades.scss
@@ -6,7 +6,12 @@ section#comunidades{
       position: relative;
       width: 100%;
       padding: 25px 0;
-      height: 500px;
+      //height: 500px;
+      @media (min-width: $large){
+        width: 85%;
+        margin: 0 auto;
+        display: block;
+      }
   }
 
   article.socialbox{
@@ -18,6 +23,13 @@ section#comunidades{
     padding: 1em;
     @include box-shadow;
     border-radius: 3px;
+
+    @media (min-width: $large){
+      width: 29%;
+      margin-right: 1%;
+      display: inline-block;
+      float: left;
+    }
 
     figure{
       width: 100%;
