--- a/css/base.css
+++ b/css/base.css
@@ -1364,6 +1364,11 @@ input[type].required::-ms-input-placeholder {
 input[type].required::placeholder {
   color: crimson; }
 
+form label.err {
+  color: #f7931e;
+  font-weight: 300;
+  font-size: .95em; }
+
 .astudillo h1, .astudillo h2, .astudillo h3, .corregidora h1, .corregidora h2, .corregidora h3, .corregidora h4, .pri h5, .verde h5 {
   position: absolute;
   left: -300%;
@@ -1953,6 +1958,8 @@ section#buzon {
   section#buzon input::placeholder, section#buzon textarea::placeholder {
     color: #D1D1D1;
     font-size: 1.5rem; }
+  section#buzon input[type] {
+    color: #c4e86b; }
 
 section#reclutamiento figure.ribbon {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 417.5 1279.6'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%2300A49A;%7D .st1%7Bfill:%23B1CA07;%7D .st2%7Bfill:%238C9086;%7D .st3%7Bfill:%23B90066;%7D%0A%3C/style%3E%3Cpolygon class='st0' points='417.5 959.7 228.5 959.7 0 1279.6 189 1279.6 '/%3E%3Cpolygon class='st1' points='417.5 319.9 228.5 319.9 0 0 189 0 '/%3E%3Cpolygon class='st2' points='417.5 319.9 228.5 319.9 0 639.8 189 639.8 '/%3E%3Cpolygon class='st3' points='417.5 959.7 228.5 959.7 0 639.8 189 639.8 '/%3E%3C/svg%3E");
@@ -1991,13 +1998,13 @@ section#reclutamiento legend {
 section#reclutamiento input[type] {
   border-bottom-color: #c4e86b; }
   section#reclutamiento input[type]::-webkit-input-placeholder {
-    color: #c4e86b; }
+    color: #799900; }
   section#reclutamiento input[type]:-ms-input-placeholder {
-    color: #c4e86b; }
+    color: #799900; }
   section#reclutamiento input[type]::-ms-input-placeholder {
-    color: #c4e86b; }
+    color: #799900; }
   section#reclutamiento input[type]::placeholder {
-    color: #c4e86b; }
+    color: #799900; }
 
 footer {
   background-color: #3e3e3e; }
