--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -16,6 +16,7 @@ $action-color: #9ab006;
 $dark : #3e3e3e;
 $w: #fefefe;
 $silver: #D1D1D1;
+$warning_orange: #f7931e;
 
 @media (min-width: 960px){
   .foo{};
