--- a/scss/content/_s_reclutamiento.scss
+++ b/scss/content/_s_reclutamiento.scss
@@ -25,8 +25,22 @@ section#reclutamiento{
     p{font-size: .95em;}
   }
 
-  input[type]{
+  input[type],select{
     border-bottom-color: $a_green;
     &::placeholder{color:$a_green_dark;}
   }
+  input#edad{
+    width: 30%;
+    margin-right: 0;
+
+    &+span{
+      height: 38px;
+      padding: 11px 0;
+      text-transform: uppercase;
+      color: $a_green_dark;
+      border-bottom: 1px solid $a_green;
+      &+label{font-size: .75em;margin: -15px 0 15px 0;color:$a_green_dark;}
+    }
+  }
+   select,option.placeholder{color:$a_green_dark;text-transform: uppercase;}
 }
