--- a/scss/content/_s_comunidades.scss
+++ b/scss/content/_s_comunidades.scss
@@ -83,10 +83,11 @@ section#comunidades{
   }
   h3{
 text-align: center;
-    font-size: 1.15em;
+    font-size: 2.5em;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 700;
     letter-spacing: .025em;
     margin: 25px auto;
+    color: $w;
   }
 }
