--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -14,6 +14,7 @@ $a_grey_shade: #8a8c8c;
 $a_grey_shade_light: #b3b2b1;
 $action-color: #9ab006;
 $dark : #3e3e3e;
+$darkest: #2e2a25;
 $w: #fefefe;
 $silver: #D1D1D1;
 $warning_orange: #f7931e;
